--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-no-sleep": "^0.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
